Fix image alignment and title

--- a/src/root/views/DrefApplicationForm/CaptionInput/styles.module.scss
+++ b/src/root/views/DrefApplicationForm/CaptionInput/styles.module.scss
@@ -1,7 +1,8 @@
+@import '~styles/settings/_variables.scss';
+
 .image-input {
   display: flex;
   flex-direction: column;
-  align-items: center;
 
   .caption-input {
     width: 100%;
